--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
           <div class="section-heading">
             <h2>About Me</h2>
             <div class="line-dec"></div>
-            <span>Dedicated Associate Consultant with a strong background in SAP BASIS, Release and Transport Management, as well as Change Management. Proven experience in leading successful projects, 
-			including migrating SAP systems to cloud environments. Excellent organizational, 
-			communication, and problem-solving skills. Looking to leverage expertise in dynamic consulting environments.</span>
+            <span>Dedicated Associate Consultant with a strong background in SAP BASIS, Kernal/Patch Upgrades, Note Implementations, Migration, Hana DB Operations, Release and Transport Management, as well as Change Management. 
+		   Proven experience in leading successful projects, including migrating SAP systems to cloud environments, System Monitoring and health checks. Excellent organizational, communication, and problem-solving skills. 
+		   Looking to leverage expertise in dynamic consulting environments.</span>
           </div>
           <div class="left-image-post">
             <div class="row">
@@ -94,7 +94,7 @@
 				  <h5>April 2021 - Present</h5>
                     <!--<h5>Capgemini Technology Services India Limited</h5>-->		
 					I am currently employed at Capgemini with extensive experience in two major projects. At Becton Dickinson (BD), 
-					I served as the SAP Transport and Release Manager, ensuring smooth transitions and deployments. In my current role on the Amgen Project, I excel as the Change Owner/Manager, 
+					I served as the SAP BASIS Administrator, SAP Transport and Release Manager, ensuring smooth transitions and deployments. In my current role on the Amgen Project, I excel as both SAP BASIS Administrator and Change Owner/Manager, 
 					notably contributing to the success of the Skylift project by overseeing the migration of onPrem SAP Systems to AWS Cloud.
                   </p>
                   <div class="white-button">
@@ -153,19 +153,16 @@
                   <p>
                     <h5>August 2021 - March 2023</h5>
 					<i class="fa fa-check">Led SAP release and transport processes, ensuring timely and accurate deployments.</i>
-					<i class="fa fa-check">Collaborated with cross-functional teams to optimize release schedules and minimize disruptions.</i>
-					<i class="fa fa-check">Developed and maintained comprehensive release documentation for reference and audits.</i>
-					<i class="fa fa-check">Proactively identified and resolved issues, leading to smooth and efficient SAP operations.</i>
+					<i class="fa fa-check">Developed and maintained comprehensive release documentation for reference and audits.</i>					
 					<i class="fa fa-check">Enhanced process efficiency, reducing release times by 25% while maintaining quality standards.</i>
 					<i class="fa fa-check">Reporting projects development statuses and team progress, defect status and follow ups with team members and coordination.</i>
 					<i class="fa fa-check">Working on project go live, ensuring all release requirements are met. Confirming all approvals are received for the change requests.</i>
-					<i class="fa fa-check">Getting required approvals for the release. Track/ update Incident in SIAM tool. Verifying test cases are executed and approved fully.</i>
 					<i class="fa fa-check">Manage risks and resolves issues that affect release scope, schedule, and quality. Preparation of E070 report. Working on Manual configuration, Expedited & Emergency tickets.</i>
-					<i class="fa fa-check">Communicate release details and schedules to the business and IT teams as required.</i>
 					<i class="fa fa-check">Use monitoring tools to check the health and performance of SAP systems.</i>
 					<i class="fa fa-check">Keep detailed records of system configurations, changes, and procedures.</i>
 					<i class="fa fa-check">Performing Daily health checks.</i>
 					<i class="fa fa-check">SAP Notes Implementation</i>
+			  		<i class="fa fa-check">Handson experience on Kernal/Patch Upgrades, Note Implementation, Hana Administration and Transport Management.</i>
                   </p>
                   <div class="white-button">
                     <!--<a href="#">Read More</a>-->
@@ -181,14 +178,17 @@
                   <h4>SAP BASIS Administrator and Change Owner/Manager (Amgen Project)</h4>
                   <p>
 				  <h5>March 2023 – Present</h5>
-                    <i class="fa fa-check">Worked as Basis and Change Manager resource on Skylift Migration Project end to end.</i>
+                    			<i class="fa fa-check">Worked as Basis and Change Manager resource on Skylift Migration Project end to end.</i>
 					<i class="fa fa-check">Created and Executed IQ/OQ’s in ALM as well as in LaMa.</i>
 					<i class="fa fa-check">Worked on Defects, creation and execution of defects to resolve the issues.</i>
 					<i class="fa fa-check">Installation of Infrastructure on AWS to migrate On-Prem serves to cloud.</i>
 					<i class="fa fa-check">Served as Change Owner for the SkyLift Project, overseeing the migration of OnPrem SAP systems to AWS.</i>
 					<i class="fa fa-check">Managed the whole SkyLift Project without any deviations and escalations from Business.</i>
+			  		<i class="fa fa-check">Managed all project documentation, ensuring accuracy and compliance with standards.</i>
 					<i class="fa fa-check">Collaborating with stakeholders to assess, plan, and execute change initiatives effectively.</i>
-					<i class="fa fa-check">Providing training and guidance to teams during change transitions, ensuring smooth adaptation.</i>
+			  		<i class="fa fa-check">Performed Client Copy, System refresh and other activities across SAP Landscape using LaMa.</i>
+			  		<i class="fa fa-check">Hana Administration and Major BASIS Activities such as Kernal/Patch Upgrades, Communicate the project plan to stakeholders and Implementation strategies.</i>
+			  		<i class="fa fa-check">Providing training and guidance to teams during change transitions, ensuring smooth adaptation.</i>
 					<i class="fa fa-check">Monitoring change progress and delivering insights and recommendations for improvement.</i>
 				  </p>	
                   <!--<div class="white-button">
@@ -220,6 +220,7 @@
 					<h5><i class="fa fa-check-square" >SAP Release and Transport Management</i></h5>
 					<h5><i class="fa fa-check-square">SAP BASIS</i></h5>
 					<h5><i class="fa fa-check-square">Change Management</i></h5>
+					<h5><i class="fa fa-check-square">HANA Administration</i></h5>
 					<h5><i class="fa fa-check-square">Project Documentation</i></h5>
 					<h5><i class="fa fa-check-square">AWS Cloud Migration</i></h5>
 					<h5><i class="fa fa-check-square">Stakeholder Collaboration</i></h5>			
@@ -232,6 +233,7 @@
 					<h5><i class="fa fa-check-square">Process Improvement</i></h5>
 					<h5><i class="fa fa-check-square">SAP System Monitoring</i></h5>
 					<h5><i class="fa fa-check-square">Risk Assessment</i></h5>
+					<h5><i class="fa fa-check-square">Kernal/Patch Upgrades</i></h5>
 					<h5><i class="fa fa-check-square">Team Leadership</i></h5>
 					<h5><i class="fa fa-check-square">Training and Development</i></h5>
 					<h5><i class="fa fa-check-square">Problem Solving and Critical Thinking</i></h5>
@@ -345,6 +347,7 @@
                     </figcaption>
                   </figure>
                 </div>
+		      <br>
 
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
@@ -363,6 +366,7 @@
                     </figcaption>
                   </figure>
                 </div>
+		      <br>
 
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
@@ -381,6 +385,7 @@
                     </figcaption>
                   </figure>
                 </div>
+		      <br>
 
                 <!--<div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
