--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                     </figcaption>
                   </figure>
                 </div>
-
-		       <div class="isotope-item" data-type="nature">
+			<br>
+		<div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
                       src="assets/images/certificate5.jpg"
@@ -346,7 +346,7 @@
                     </figcaption>
                   </figure>
                 </div>
-
+			<br>
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
                     <img
@@ -370,8 +370,7 @@
                 <div class="isotope-item" data-type="animals">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/certificate3.jpg"
-					/>
+                      src="assets/images/certificate3.jpg"/>
                     <figcaption>
                       <a
                         href="assets/images/certificate3.jpg"
